Fixed lighting/shadow issue with meshes
Disabled shadows on meshes related to the skeletal mesh, so that light propagates around the character fully, instead of light affecting only one side of the character

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -322,7 +322,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,InputSettings.Bindings.ActionMappings.PrepAttack,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,InputSettings.Bindings.ActionMappings.PrepAttack,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
@@ -506,7 +506,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Collision.BodyInstance\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -520,7 +520,7 @@ SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 IKRetargeter="\"Object\" "
@@ -810,7 +810,7 @@ ChildActorComponent="\"Object\" "
 LanternOn_C="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MainCharacter.BP_MainCharacter
 
 [SlateAdditionalLayoutConfig]
@@ -2664,6 +2664,7 @@ LanternOn_C.HLOD=True
 LanternOn_C.Physics=True
 LanternOn_C.WorldPartition=True
 LanternOn_C.Events=True
+PointLightComponent.Collision=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2820,8 +2821,8 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin11.DrSFinalJoi
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/Functional/Equips/Lantern/lighter
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem1=/Game/Resources/Functional/Equips/Lantern/lighter
 MRUItem2=/Game/Characters/Mannequins/Animations/ABP_Quinn
 MRUItem3=/Game/Resources/Functional/Equips/Lantern/LanternOn
 MRUItem4=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
