Updates to Cave map. It's spooky now. Music added
Note to self, Unreal prefers .wav over .mp3

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -413,11 +413,11 @@ SceneComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Constrai
 LandscapeStreamingProxy=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 Trigger_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 Overworld_TransitionTrigger_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
-Actor=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+Actor=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 TestRoom_TransitionTrigger_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 DirectionalLight=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 LightComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
-PointLight=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+PointLight=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 SpringArmComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 K2Node_FunctionEntry=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 StaticMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
@@ -517,7 +517,7 @@ AnimSequenceBase="\"Object\" "
 AnimationAsset="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -2665,6 +2665,34 @@ LanternOn_C.Physics=True
 LanternOn_C.WorldPartition=True
 LanternOn_C.Events=True
 PointLightComponent.Collision=True
+LanternOn_C.TransformCommon=True
+LanternOn_C.Networking=True
+Cave_C.Tick=True
+Cave_C.Replication=True
+Cave_C.Actor=True
+Cave_C.Input=True
+Cave_C.HLOD=True
+Cave_C.Physics=True
+Cave_C.WorldPartition=True
+Cave_C.Events=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Parameters=True
+AmbientSound.Subtitles=True
+AmbientSound.Attachment=True
+AmbientSound.Randomization=True
+AmbientSound.Analysis=True
+AmbientSound.Concurrency=True
+AmbientSound.Tags=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Replication=True
+AmbientSound.HLOD=True
+AmbientSound.Physics=True
+AmbientSound.Networking=True
+AmbientSound.Actor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2799,6 +2827,12 @@ StaticMeshComponent.Collision=False
 StaticMeshComponent.Lighting=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Resources/SFX/music/DecayWav.DecayWav;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
+RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock.M_Rock;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_N.T_Rock_Basalt_N;
 RecentlyPlaced=/Game/Resources/Functional/Equips/Lantern/Lantern.Lantern;
 RecentlyPlaced=/Game/Resources/Functional/Equips/LanternFinal.LanternFinal;
 RecentlyPlaced=/Game/Resources/Functional/Cave_TransitionTrigger.Cave_TransitionTrigger;
@@ -2813,34 +2847,28 @@ RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Trim_90_In.Shape_Trim_90_In;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_MainCharacter.BP_MainCharacter;
 RecentlyPlaced=/Game/Dialogue/BP_NPC_TALK1.BP_NPC_TALK1;
-RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/ThirdPerson/AI/v2/BP_AI_v2.BP_AI_v2;
-RecentlyPlaced=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2.BP_Enemy_AI_v2;
-RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin.DrSFinalJoin;
-RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin11.DrSFinalJoin11;
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_MainCharacter
-MRUItem1=/Game/Resources/Functional/Equips/Lantern/lighter
-MRUItem2=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem3=/Game/Resources/Functional/Equips/Lantern/LanternOn
-MRUItem4=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
-MRUItem5=/Game/Resources/Functional/Equips/Lantern/LanternFinal
-MRUItem6=/Game/Resources/Functional/Equips/Lantern/Lantern
-MRUItem7=/Game/Resources/Functional/TestRoom_TransitionTrigger
-MRUItem8=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
-MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Quinn
-MRUItem10=/Game/Resources/Functional/Equips/Glass
-MRUItem11=/Game/Resources/Functional/Equips/LanternFinal
-MRUItem12=/Game/Resources/Functional/Equips/Metal
-MRUItem13=/Game/Resources/Functional/Equips/Chain
-MRUItem14=/Game/Resources/Functional/Equips/Candle
-MRUItem15=/Game/Resources/Functional/Equips/Lantern
-MRUItem16=/Game/Resources/Functional/Cave_TransitionTrigger
-MRUItem17=/Game/Resources/Functional/Overworld_TransitionTrigger
-MRUItem18=/Game/Resources/Functional/Trigger
-MRUItem19=/Game/Levels/Overworld
+MRUItem0=/Game/Resources/SFX/music/DecayWav
+MRUItem1=/Game/Resources/SFX/music/___
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem3=/Game/Resources/Functional/Equips/Lantern/lighter
+MRUItem4=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem5=/Game/Resources/Functional/Equips/Lantern/LanternOn
+MRUItem6=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
+MRUItem7=/Game/Resources/Functional/Equips/Lantern/LanternFinal
+MRUItem8=/Game/Resources/Functional/Equips/Lantern/Lantern
+MRUItem9=/Game/Resources/Functional/TestRoom_TransitionTrigger
+MRUItem10=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
+MRUItem11=/Game/Characters/Mannequins/Meshes/SKM_Quinn
+MRUItem12=/Game/Resources/Functional/Equips/Glass
+MRUItem13=/Game/Resources/Functional/Equips/LanternFinal
+MRUItem14=/Game/Resources/Functional/Equips/Metal
+MRUItem15=/Game/Resources/Functional/Equips/Chain
+MRUItem16=/Game/Resources/Functional/Equips/Candle
+MRUItem17=/Game/Resources/Functional/Equips/Lantern
+MRUItem18=/Game/Resources/Functional/Cave_TransitionTrigger
+MRUItem19=/Game/Resources/Functional/Overworld_TransitionTrigger
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -2913,6 +2941,8 @@ MRUItem19=/Game/Levels/Overworld
 /Game/Resources/Functional/Equips/Lantern/LanternFinal.LanternFinal=1
 /Game/Resources/Functional/Equips/Lantern/LanternOff_m.LanternOff_m=1
 /Game/Resources/Functional/Equips/Lantern/LanternOn.LanternOn=0
+/Game/Cave.Cave:PersistentLevel.Cave=1
+/Game/Resources/SFX/music/DecayWav.DecayWav=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
