More caves. Imported Chest object
Looks ok, if a little different from the style. Might have to add some ruggedness to the texture to make it a little more dulled and less like plastic

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -328,7 +328,7 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
-CapsuleComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
+CapsuleComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
 AudioEditorSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
@@ -409,7 +409,7 @@ BP_MainCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Cons
 EdGraph=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 NewFunction=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 NewFunction_4=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
-SceneComponent=
+SceneComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 LandscapeStreamingProxy=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 Trigger_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 Overworld_TransitionTrigger_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
@@ -438,7 +438,7 @@ bp_char_slime_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Constra
 bp_actor_Slime_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Resources/Basic_Objects
+ContentBrowserTab1.SelectedPaths=/Game/Resources/Mobs/Slime
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -508,7 +508,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Cave
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -801,7 +801,7 @@ TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" "
 BackgroundBlur="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings\" "
 ContentWidget="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings\" "
-BP_MainCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_MainCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.Tags\" "
 BoxComponent="\"Object\" "
 LightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
@@ -825,7 +825,7 @@ MaterialExpressionScalarParameter="\"Object\" "
 DirectionalLightComponent="\"Object\" "
 SpotLightComponent="\"Object\" "
 bp_char_slime_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.Tags\" "
-bp_actor_Slime_C="\"Object.Replication.ReplicatedMovement\" "
+bp_actor_Slime_C=
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -2912,6 +2912,8 @@ bp_actor_Slime_C.HLOD=True
 bp_actor_Slime_C.Physics=True
 bp_actor_Slime_C.WorldPartition=True
 bp_actor_Slime_C.Events=True
+bp_actor_Slime_C.TransformCommon=True
+bp_actor_Slime_C.Networking=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3046,6 +3048,8 @@ StaticMeshComponent.Collision=False
 StaticMeshComponent.Lighting=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Resources/Basic_Objects/chestLong.chestLong;
+RecentlyPlaced=/Game/Resources/Mobs/Slime/bp_actor_Slime.bp_actor_Slime;
 RecentlyPlaced=/Game/Resources/Mobs/Slime/bp_Slime.bp_Slime;
 RecentlyPlaced=/Game/Resources/Mobs/Slime/slimeCombined.slimeCombined;
 RecentlyPlaced=/Game/Resources/Basic_Objects/Torch.Torch;
@@ -3064,30 +3068,28 @@ RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock.M_Rock;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_N.T_Rock_Basalt_N;
 RecentlyPlaced=/Game/Resources/Functional/Equips/Lantern/Lantern.Lantern;
 RecentlyPlaced=/Game/Resources/Functional/Equips/LanternFinal.LanternFinal;
-RecentlyPlaced=/Game/Resources/Functional/Cave_TransitionTrigger.Cave_TransitionTrigger;
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/Mobs/Slime/bp_char_slime
-MRUItem1=/Game/Resources/Mobs/Slime/bp_actor_Slime
-MRUItem2=/Game/Resources/Mobs/Slime/bp_Slime
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_MainCharacter
-MRUItem4=/Game/Resources/Functional/Equips/Lantern/LanternOn
-MRUItem5=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
-MRUItem6=/Game/Resources/Mobs/Slime/slimeCombined
-MRUItem7=/Game/Resources/Mobs/Material
-MRUItem8=/Game/Resources/Mobs/slimeCombined
-MRUItem9=/Game/Resources/Basic_Objects/Torch
-MRUItem10=/Game/Resources/Functional/Footsteps/BP_FootstepAnimNotify
-MRUItem11=/Game/StarterContent/Props/BunchaRocks
-MRUItem12=/Game/StarterContent/Props/SM_Rock_EDIT
-MRUItem13=/Game/StarterContent/Props/SM_Rock1
-MRUItem14=/Game/StarterContent/Props/SM_Rock
-MRUItem15=/Game/Resources/SFX/music/DecayWav
-MRUItem16=/Game/Resources/SFX/music/___
-MRUItem17=/Game/Resources/Functional/Equips/Lantern/lighter
-MRUItem18=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem19=/Game/Resources/Functional/Equips/Lantern/LanternFinal
+MRUItem0=/Game/Resources/Basic_Objects/Material_004
+MRUItem1=/Game/Resources/Basic_Objects/Material_003
+MRUItem2=/Game/Resources/Basic_Objects/Material_002
+MRUItem3=/Game/Resources/Basic_Objects/Material_001
+MRUItem4=/Game/Resources/Basic_Objects/Material
+MRUItem5=/Game/Resources/Basic_Objects/chestLong
+MRUItem6=/Game/Resources/Mobs/Slime/bp_char_slime
+MRUItem7=/Game/Resources/Mobs/Slime/bp_actor_Slime
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem9=/Game/Resources/Mobs/Slime/bp_Slime
+MRUItem10=/Game/Resources/Functional/Equips/Lantern/LanternOn
+MRUItem11=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
+MRUItem12=/Game/Resources/Mobs/Slime/slimeCombined
+MRUItem13=/Game/Resources/Mobs/Material
+MRUItem14=/Game/Resources/Mobs/slimeCombined
+MRUItem15=/Game/Resources/Basic_Objects/Torch
+MRUItem16=/Game/Resources/Functional/Footsteps/BP_FootstepAnimNotify
+MRUItem17=/Game/StarterContent/Props/BunchaRocks
+MRUItem18=/Game/StarterContent/Props/SM_Rock_EDIT
+MRUItem19=/Game/StarterContent/Props/SM_Rock1
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -3173,6 +3175,12 @@ MRUItem19=/Game/Resources/Functional/Equips/Lantern/LanternFinal
 /Game/Resources/Mobs/Slime/slimeCombined.slimeCombined=1
 /Game/Resources/Mobs/Slime/bp_actor_Slime.bp_actor_Slime=0
 /Game/Resources/Mobs/Slime/bp_char_slime.bp_char_slime=1
+/Game/Resources/Basic_Objects/chestLong.chestLong=1
+/Game/Resources/Basic_Objects/Material.Material=1
+/Game/Resources/Basic_Objects/Material_001.Material_001=1
+/Game/Resources/Basic_Objects/Material_002.Material_002=1
+/Game/Resources/Basic_Objects/Material_003.Material_003=1
+/Game/Resources/Basic_Objects/Material_004.Material_004=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3392,7 +3400,7 @@ WindowSize=X=1706.000 Y=1060.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content
+UNR=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/ThirdPerson/Maps
 BRUSH=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
 FBX=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
 FBXAnim=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
@@ -4446,7 +4454,6 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
@@ -4623,8 +4630,8 @@ Property=0.5
 Value=1
 
 [MRU]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/Cave
+MRUItem0=/Game/Cave
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem2=/Game/CaveTestProto
 MRUItem3=/Game/Levels/Overworld
 MRUItem4=/Game/Overworld
